@@ -917,7 +917,7 @@ DEATH=START
 # other entries to specify specific body rooms for racial 
 # categories or races (MORGUE_ELF, MORGUE_HUMAN, etc..). You may also 
 # use alignment, deity, class, or faction (MORGUE_GOOD, MORGUE_FIGHTER, ..),
-# or even level (DEATH_13, ...).
+# or even level (MORGUE_13, ...).
 # You can also use MORGUE_MASK to tie a morgue room to a mask by
 #  setting the key equal to room id followed by an equal sign, 
 #  then a mask (see ahelp ZAPPERMASK).
