@@ -1805,7 +1805,7 @@
 				<br><a name="Thief_MarkTrapped"><B>Mark Trapped (Thief_MarkTrapped)</B></a>
 				<pre><BR>Skill    : Mark Trapped<BR>Domain   : Find/remove traps<BR>Available: Trapper(7) <BR>Allows   : AutoMark Traps, Trap Disabling I<BR>Use Cost : Mana (28) Movement (28) <BR>Quality  : Circumstantial<BR>Targets  : Items Exits Rooms <BR>Range    : Touch, or not applicable<BR>Commands : MARKTRAPPED<BR>Usage    : MARKTRAPPED [ITEM/DIRECTION/HERE]<BR>Example  : marktrapped north<BR>Example  : marktrapped chest<BR>The thief places an easily recognizable marker upon the target which all will<BR>recognize as meaning that it is trapped.  This can serve as a nice warning to<BR>team members that stumble that way, or a confusing countermeasure to force<BR>other thieves to be extra careful.  The skill can be used again to remove such<BR>marks.  Marks last quite a long time, though each thief is limited in the<BR>number that may be marked.</pre></P>  <P> 
 				<br><a name="Thief_MarkerSpying"><B>Marker Spying (Thief_MarkerSpying)</B></a>
-				<pre><BR>Skill    : Marker Spying<BR>Domain   : Stealthy<BR>Available: Assassin(21) <BR>Requires : 'Mark', and 'Spying'<BR>Allows   : Stealthy I<BR>Use Cost : Mana (35) Movement (35) <BR>Quality  : Sometimes Beneficial<BR>Targets  : Creatures <BR>Range    : Touch, or not applicable<BR>Commands : MARKERSPYING, MARKSPY<BR>Usage    : MARKER SPYING [TARGET] <BR>Example  : markerspying<BR>The thief has become adept at rummaging through the papers of his marks.  Until<BR>this skill is disengaged, he will remember those parts of the papers of those<BR>he Marks that the marks themselves read, regardless of where they are in the<BR>world. <BR><BR>This skill is identical to SPYING, but does not require that the thief and the<BR>one spyed on be in the same room, and it only works on those the thief has<BR>MARKed.  The skill automatically transfers from Mark to Mark indefinitely, or<BR>until disengaged.</pre></P>  <P> 
+				<pre><BR>Skill    : Marker Spying<BR>Domain   : Stealthy<BR>Available: Assassin(21) <BR>Requires : 'Mark', and 'Spying'<BR>Allows   : Stealthy I<BR>Use Cost : Mana (35) Movement (35) <BR>Quality  : Sometimes Beneficial<BR>Targets  : Creatures <BR>Range    : Touch, or not applicable<BR>Commands : MARKERSPYING, MARKSPY<BR>Usage    : MARKER SPYING [TARGET] <BR>Example  : markerspying<BR>The thief has become adept at rummaging through the papers of his marks.  Until<BR>this skill is disengaged, he will remember those parts of the papers of those<BR>he Marks that the marks themselves read, regardless of where they are in the<BR>world. <BR><BR>This skill is identical to SPYING, but does not require that the thief and the<BR>one spied on be in the same room, and it only works on those the thief has<BR>MARKed.  The skill automatically transfers from Mark to Mark indefinitely, or<BR>until disengaged.</pre></P>  <P> 
 				<br><a name="Merchant"><B>Marketeering (Merchant)</B></a>
 				<pre><BR>Skill    : Marketeering<BR>Domain   : Influential<BR>Available: Artisan(15) <BR>Allows   : Influencing I, Quick Worker I<BR>Invoked  : Automatic<BR>Usage    : MARKET ([LIST/REMOVE]) [ITEM NAME] ([PRICE])<BR>Example  : market list<BR>: market shoe 500<BR>: market all.shoe<BR>: market remove shoe<BR>This skill allows a player to behave like a shopkeeper, allowing other players<BR>to LIST, BUY, and VIEW items which the player has put up for sale. The player<BR>may add any item in their inventory to their items for sale, and set a price<BR>for the item.  The remove command may be used to take items of that name off<BR>the market.</pre></P>  <P> 
 				<br><a name="Masonry"><B>Masonry (Masonry)</B></a>
@@ -1979,7 +1979,7 @@
 				<br><a name="Scrapping"><B>Scrapping (Scrapping)</B></a>
 				<pre><BR>Skill    : Scrapping<BR>Domain   : Nature lore<BR>Available: Artisan(25) Numerous Classes(20) <BR>Allows   : Nature Lore I, Quick Worker I<BR>Use Cost : Movement (5) <BR>Quality  : Circumstantial<BR>Targets  : Items Creatures <BR>Range    : Touch, or not applicable<BR>Commands : SCRAP, SCRAPPING<BR>Usage    : SCRAP [ITEM NAME]<BR>Example  : scrap longsword<BR>This skill allows a player to scrap one or more identical items into their<BR>component resources, which can then be used by the other common skills.  Some<BR>materials require that a fire be built before scrapping can begin.  The yield<BR>on scrapping is always 1 pound of material resources per 5 pounds of items.</pre></P>  <P> 
 				<br><a name="Thief_Scratch"><B>Scratch (Thief_Scratch)</B></a>
-				<pre><BR>Skill    : Scratch<BR>Domain   : Dirty fighting<BR>Available: Assassin(18) <BR>Allows   : Combat Fluidity I, Dirty Fighting I<BR>Use Cost : Movement (18) <BR>Quality  : Malicious<BR>Targets  : Creatures <BR>Range    : Touch, or not applicable<BR>Commands : SCRATCH<BR>Usage    : SCRATCH [TARGET NAME] <BR>Example  : scratch orc<BR>The thief descretely uses his or her fingertips to cafully deliver very minor<BR>damage to the target. If done carefully, the target won't know who did it.</pre></P>  <P> 
+				<pre><BR>Skill    : Scratch<BR>Domain   : Dirty fighting<BR>Available: Assassin(18) <BR>Allows   : Combat Fluidity I, Dirty Fighting I<BR>Use Cost : Movement (18) <BR>Quality  : Malicious<BR>Targets  : Creatures <BR>Range    : Touch, or not applicable<BR>Commands : SCRATCH<BR>Usage    : SCRATCH [TARGET NAME] <BR>Example  : scratch orc<BR>The thief descreetly uses his or her fingertips to cafully deliver very minor<BR>damage to the target. If done carefully, the target won't know who did it.</pre></P>  <P> 
 				<br><a name="ScrimShaw"><B>Scrimshawing (ScrimShaw)</B></a>
 				<pre><BR>Skill    : Scrimshawing<BR>Domain   : Crafting<BR>Available: Artisan(3) Numerous Classes(5) <BR>Requires : 'Sculpting'<BR>Allows   : Light Crafting I, Quality Crafting I, Quick Worker I<BR>Allows   : Lethal Crafting I, Counterbalance Crafting I<BR>Use Cost : Movement (5) <BR>Quality  : Circumstantial<BR>Targets  : Items Creatures <BR>Range    : Touch, or not applicable<BR>Commands : SCRIM, SCRIMSHAWING<BR>Usage    : SCRIM (LIST/MEND/REFIT/SCAN/LEARN) (BUNDLE [NUM]) [ITEM TYPE]<BR>Example  : scrim small table<BR>: scrim bundle 100 bone<BR>: scrim list<BR>: scrim list sword<BR>: scrim list all<BR>: scrim mend sword<BR>: scrim refit earrings<BR>: scrim scan<BR>: scrim scan bob<BR>: scrim learn hand<BR>This skill allows a player to craft bone items, such as chairs and swords.  The<BR>extent of the items which can be crafted expands as the player goes up in<BR>level.  This command also allows the player to repair any damaged bone weapons<BR>or armor, refit any armor which may be the wrong size, or learn to how to scrim<BR>a found item, provided a blank recipe page, or recipe book with blank pages is<BR>in his or her inventory. To begin scrimshawing a new item, the player must have<BR>placed the bone he or she wishes to make the item from on the ground.  The<BR>player may also scan the room or other players for equipment that may be mended<BR>by this skill, using the scan parameter. The raw bone for scrimshaw is found<BR>using the Butchering skill.</pre></P>  <P> 
 				<br><a name="ScrollScribing"><B>Scroll Scribing (ScrollScribing)</B></a>
