@@ -187,7 +187,8 @@
 #     [NUM] is the number of times retire must be used
 #     successfully before the achievement is gained.
 #
-# ... EVENT="GOTITEM" ITEMMASK="[ITEMMASK]" PLAYERMASK="[PLAYERMASK]"
+# ... EVENT="GOTITEM" NUM=[NUMBER] ITEMMASK="[ITEMMASK]" PLAYERMASK="[PLAYERMASK]"
+#     [NUM] is the number of the items required to get the achievement, default 1.
 #     [ITEMMASK] is a standard mask denoting which items, when gotten, automatically
 #     complete this achievement.  Make sure it's a narrow filter! See archon help on 
 #     Zapper Masks (AHELP ZAPPERMASKS) from the command line for 
