@@ -2044,7 +2044,7 @@ those parts of the papers of those he Marks that the marks \
 themselves read, regardless of where they are in the world. \n\r\
 \n\r\
 This skill is identical to SPYING, but does not require that \
-the thief and the one spyed on be in the same room, and it \
+the thief and the one spied on be in the same room, and it \
 only works on those the thief has MARKed.  The skill \
 automatically transfers from Mark to Mark indefinitely, or \
 until disengaged.
@@ -2760,7 +2760,7 @@ SCRATCH=THIEF_SCRATCH
 THIEF_SCRATCH=<ABILITY>\
 Usage    : SCRATCH [TARGET NAME] \n\r\
 Example  : scratch orc\n\r\
-The thief descretely uses his or her fingertips to cafully deliver very \
+The thief discreetly uses his or her fingertips to cafully deliver very \
 minor damage to the target. If done carefully, the target won't know who \
 did it.
 
@@ -3224,7 +3224,7 @@ THIEF_SPYING=SPYING
 SPYING=<ABILITY>\
 Usage    : SPYING [TARGET] \n\r\
 Example  : spy bob\n\r\
-The thief, by lip reading and discrete over-the-shoulder glaces, is able \
+The thief, by lip reading and discreet over-the-shoulder glaces, is able \
 to read anything the target reads while they are both in the same room. \
 The thief must remain unnoticed by the target.  Otherwise, this skill \
 lasts indefinitely once the thief has figured out how to spy on the target. \
