@@ -1729,7 +1729,8 @@ Usage    : CAST "MASS DISINTEGRATE"\n\r\
 Example  : cast "mass disintegrate"\n\r\
 If this spell is successful, the all enemies and items in the room are \
 complete disintegrated and destroyed.  Living creatures will die just before \
-vanishing.
+vanishing.  However, this spell is not always successful, especially against \
+non-weak enemies.
 
 SPELL_MASSFEATHERFALL=SPELL_MASS_FEATHERFALL
 SPELL_MASS_FEATHERFALL=<ABILITY>\
