@@ -15,6 +15,7 @@
    14. Gnomes get BurrowSpeak and Burrow Hide, Goblins +5% XP, Half Elfs Cultural Adaptation
    15. Racial cultural abilities now support level and auto-gain/qualify.
    16. New Spells: Darkness Globe
+   17. Achievement type GOTITEM now supports NUM argument.
 # Build 5.9.4 Released 08/03/2016
    1. Qualify now shows language limits
    2. New Prop_NoTeleport exceptions
